# firstproblem

./: CMakeLists.txt  README.md  RNA.cpp  RNA.h  TEST.cpp
